--- a/mypage.html
+++ b/mypage.html
@@ -70,7 +70,8 @@ table, th, td{
 <img img src="C:\Users\Students\Desktop\tom.jpg" alt="tom and jerry" width="400" height="400"></BR>
 <a href="default.asp">
 <img src="C:\Users\Students\Desktop\tom.jpg" alt="link" style="width:42px;height:42px;">
-</a>
+</a></br>
+<h3>Robyn Rihanna Fenty is a Barbadian singer, actress, fashion designer, and businesswoman. Born in Saint Michael and raised in Bridgetown, Barbados, Rihanna was discovered by American record producer Evan Rogers who invited her to the United States to record</h3>
 </body>
 
 </html>
