--- a/mypage.html
+++ b/mypage.html
@@ -14,8 +14,8 @@ table, th, td{
 	...body text and more HTML5 tags here....
 </br>Here are the main differences between URL and URI: URL stands for Uniform Resource Locator. </br>URI stands for Uniform Resource Identifier. <h1><i><em> <strong> URL is a subset of URI that specifies where a resource is exists and the mechanism for retrieving it.</h1></i> </em> </strong> </p> <h4><u>A URI is a superset of URL that identifies a resource either by URL or URN (Uniform Resource Name) or both</h4></u>
 <form>
-	<input type ="text" placeholder="username" name="n1">
-	<input type ="password" placeholder="password" name="n2">
+	<input type ="text" placeholder="usercode" name="n1">
+	<input type ="password" placeholder="pswd" name="n2">
 	<input type ="submit" >
 	<input type ="date" placeholder="time" name="n3">
 </form>
